@@ -1,2 +1,2 @@
-set args  
+set args data4-1 
 run
